[gd_scene load_steps=8 format=2]

[ext_resource path="res://Font/Roboto-Black_80.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/SectionContainer.gd" type="Script" id=2]
[ext_resource path="res://Scripts/SongTitle.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://HiddenScrollbar.tres" type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.188235, 0.188235, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0156863, 0.00392157, 0.180392, 1 )
draw_center = false
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="EditView" type="Node2D"]
z_index = -1
z_as_relative = false
script = ExtResource( 4 )

[node name="SongTitle" type="TextEdit" parent="."]
margin_right = 1088.0
margin_bottom = 165.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -23.0
margin_top = 165.0
margin_right = 2595.0
margin_bottom = 1312.0
mouse_filter = 2
color = Color( 0.0352941, 0.027451, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SectionContainer" type="ScrollContainer" parent="."]
margin_left = 3.0
margin_top = 341.0
margin_right = 2559.0
margin_bottom = 924.0
rect_clip_content = false
theme = ExtResource( 5 )
custom_styles/bg = SubResource( 2 )
follow_focus = true
scroll_vertical_enabled = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SectionContainer"]
[connection signal="text_changed" from="SongTitle" to="." method="_on_SongTitle_text_changed"]
